--- a/settings.json
+++ b/settings.json
@@ -1,9 +1,19 @@
 {
-    "editor.wordWrap": "on",
+    "editor.wordWrap": "off",
     "editor.formatOnSave": false, // 時間のかかるフォーマットだとバグが出るのでfalse こぴぺ
     "editor.minimap.enabled": false,
-
     "files.trimTrailingWhitespace": true,
+
+    // C++
+    "C_Cpp.updateChannel": "Insiders",
+    "C_Cpp.default.cppStandard": "gnu++17",
+
+    // python
+    "python.linting.pylintEnabled": false,
+    "python.linting.flake8Enabled": true,
+    "python.linting.flake8Args": [
+        "--max-line-length=160",
+   ],
 
     // vim
     "vim.hlsearch": true,
@@ -16,9 +26,9 @@
         // use original undo by vscodevim undo
         { "before": ["u"], "after": [], "commands": [ { "command": "undo" } ] },
         // use original redo by vscodevim redo
-        { "before": ["<C-r>"], "after": [], "commands": [ { "command": "redo" } ] }
+        { "before": ["<C-r>"], "after": [], "commands": [ { "command": "redo" } ] },
         // discard to use sidebar toggle of original vscode keybindings
-        { "before": ["<C-b>"], "after": [], "commands": [ { "command": "workbench.action.toggleSidebarVisibility" } ] },
+        { "before": ["<C-b>"], "after": [], "commands": [ { "command": "workbench.action.toggleSidebarVisibility" } ] }
     ],
     "vim.statusBarColorControl": true,
     "vim.statusBarColors.normal": ["#278BD2", "#434C5E"],
@@ -29,7 +39,25 @@
         "statusBar.background": "#278BD2",
         "statusBar.noFolderBackground": "#278BD2",
         "statusBar.debuggingBackground": "#278BD2",
-        "terminal.background": "#0B0F44"
+        "terminal.background": "#0B0F44",
+        "statusBar.foreground": "#434C5E",
+        "statusBar.debuggingForeground": "#434C5E"
     },
-    "workbench.colorTheme": "Solarized Dark"
+    "workbench.colorTheme": "Solarized Dark",
+    "workbench.editorAssociations": {
+        "*.ipynb": "jupyter-notebook"
+    },
+    "python.pythonPath": "/usr/local/opt/python@3.9/bin/python3.9",
+    "python.languageServer": "Jedi",
+    "editor.tabSize": "4",
+    "editor.cursorStyle": "line",
+    "editor.insertSpaces": true,
+    "editor.lineNumbers": "on",
+    "editor.wordSeparators": "/\\()\"':,.;<>~!@#$%^&*|+=[]{}`?-",
+    "python.defaultInterpreterPath": "/usr/local/opt/python@3.9/bin/python3.9",
+    "notebook.cellToolbarLocation": {
+        "default": "right",
+        "jupyter-notebook": "left"
+    },
+    "bracketPairColorizer.depreciation-notice": false
 }
