--- a/settings.json
+++ b/settings.json
@@ -1,19 +1,32 @@
 {
-    "editor.wordWrap": "on",
-    "editor.formatOnSave": false, // 時間のかかるフォーマットだとバグが出るのでfalse こぴぺ
+    "editor.codeActionsOnSave": {
+        "source.organizeImports": true,
+    },
+    "editor.formatOnSave": true,
+    "editor.insertSpaces": true,
+    "editor.lineNumbers": "relative",
     "editor.minimap.enabled": false,
+    "editor.renderWhitespace": "all",
+    "editor.renderControlCharacters": true,
+    "editor.tabSize": 4,
+    "editor.wordSeparators": "/\\()\"':,.;<>~!@#$%^&*|+=[]{}`?-",
+    "editor.wordWrap": "on",
     "files.trimTrailingWhitespace": true,
 
     // C++
-    "C_Cpp.updateChannel": "Insiders",
     "C_Cpp.default.cppStandard": "gnu++17",
 
     // python
-    "python.linting.pylintEnabled": false,
+    "python.defaultInterpreterPath": "/usr/bin/python3",
+    "python.languageServer": "Jedi",
+    "python.linting.enabled": true,
     "python.linting.flake8Enabled": true,
     "python.linting.flake8Args": [
         "--max-line-length=160",
    ],
+    "python.linting.lintOnSave": true,
+    "python.linting.pylintEnabled": false,
+    "python.pythonPath": "/usr/local/opt/python@3.9/bin/python3.9",
 
     // vim
     "vim.hlsearch": true,
@@ -28,7 +41,8 @@
         // use original redo by vscodevim redo
         { "before": ["<C-r>"], "after": [], "commands": [ { "command": "redo" } ] },
         // discard to use sidebar toggle of original vscode keybindings
-        { "before": ["<C-b>"], "after": [], "commands": [ { "command": "workbench.action.toggleSidebarVisibility" } ] }
+        { "before": ["<C-b>"], "after": [], "commands": [ { "command": "workbench.action.toggleSidebarVisibility" } ] },
+        { "before": ["<Enter>"], "commands": ["editor.action.insertLineAfter"] }
     ],
     "vim.statusBarColorControl": true,
     "vim.statusBarColors.normal": ["#278BD2", "#FFFFFF"],
@@ -47,17 +61,14 @@
     "workbench.editorAssociations": {
         "*.ipynb": "jupyter-notebook"
     },
-    "python.pythonPath": "/usr/local/opt/python@3.9/bin/python3.9",
-    "python.languageServer": "Jedi",
-    "editor.tabSize": "4",
-    "editor.cursorStyle": "line",
-    "editor.insertSpaces": true,
-    "editor.lineNumbers": "on",
-    "editor.wordSeparators": "/\\()\"':,.;<>~!@#$%^&*|+=[]{}`?-",
-    "python.defaultInterpreterPath": "/usr/local/opt/python@3.9/bin/python3.9",
+
+    // ipynb
     "notebook.cellToolbarLocation": {
         "default": "right",
         "jupyter-notebook": "left"
     },
-    "bracketPairColorizer.depreciation-notice": false
+    "notebook.lineNumbers": "on",
+
+    // others
+    "bracketPairColorizer.depreciation-notice": false,
 }
