--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,50 @@
-# make prefix key Ctrl-b
-set -g prefix C-b
+#------------------------------#
+# Prefix key setting
+#------------------------------#
+set -g prefix C-k
+unbind C-b
 
+#------------------------------#
+# Pane settings
+#------------------------------#
 # v to vertical split
 bind v split-window -h
 # s to horizontal split
 bind s split-window -v
+# Moving between Panes
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+# Make mouse available to resize pane
+set-option -g mouse-resize-pane on
+
+#------------------------------#
+# Visual Settings
+#------------------------------#
+set-option -g default-terminal screen-256color
+set -g terminal-overrides 'xterm:colors=256'
+
+#------------------------------#
+# Mouse settings
+#------------------------------#
+set -g mouse on
+# enable mouse select
+setw -g mode-keys vi
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
+bind -T copy-mode-vi Esc send-keys -X clear-selection
+
+#------------------------------#
+# Others
+#------------------------------#
+# Change status line color when Prefix pushed
+setw -g window-status-current-format '#[bg=colour2,fg=colour255]#{?client_prefix,#[bg=colour3],} #I #W '
+# R to reload this file
+bind R source-file ~/.tmux.conf \; display "Reloaded!"
+
+# vi keybind on copy mode
+set-window-option -g mode-keys vi
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+
+set -g terminal-overrides 'xterm*:smcup@:rmcup@'
