added alias & minor fix

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,8 +16,6 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
-# Make mouse available to resize pane
-set-option -g mouse-resize-pane on
 
 #------------------------------#
 # Visual Settings
@@ -28,11 +26,11 @@ set -g terminal-overrides 'xterm:colors=256'
 #------------------------------#
 # Mouse settings
 #------------------------------#
-set -g mouse on
+set-option -g mouse on
 # enable mouse select
 setw -g mode-keys vi
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
-bind -T copy-mode-vi Esc send-keys -X clear-selection
+# bind -T copy-mode-vi Esc send-keys -X clear-selection
 
 #------------------------------#
 # Others
