--- a/settings.json
+++ b/settings.json
@@ -68,7 +68,8 @@
         "jupyter-notebook": "left"
     },
     "notebook.lineNumbers": "on",
-
     // others
     "bracketPairColorizer.depreciation-notice": false,
+    "cfnLint.path": "/Users/shigeo.hori/.pyenv/versions/3.12.0/bin/cfn-lint",
+    "workbench.startupEditor": "none",
 }
