--- a/settings.json
+++ b/settings.json
@@ -17,7 +17,7 @@
     "C_Cpp.default.cppStandard": "gnu++17",
 
     // python
-    "python.defaultInterpreterPath": "/usr/bin/python3",
+    "python.defaultInterpreterPath": "${userHome}/.pyenv/shims/python",
     "python.languageServer": "Jedi",
     "python.linting.enabled": true,
     "python.linting.flake8Enabled": true,
