--- a/settings.json
+++ b/settings.json
@@ -1,4 +1,5 @@
 {
+  "window.title": "${rootName} - ${activeEditorShort}",
   "editor.formatOnSave": true,
   "editor.insertSpaces": true,
   "editor.lineNumbers": "relative",
