fix: ペイン分割時に分割元ディレクトリで開くように変更

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,9 +8,9 @@ unbind C-b
 # Pane settings
 #------------------------------#
 # v to vertical split
-bind v split-window -h
+bind v split-window -h -c "#{pane_current_path}"
 # s to horizontal split
-bind s split-window -v
+bind s split-window -v -c "#{pane_current_path}"
 # Moving between Panes
 bind h select-pane -L
 bind j select-pane -D
