--- a/.tmux.conf
+++ b/.tmux.conf
@@ -31,6 +31,8 @@ set-option -g mouse on
 setw -g mode-keys vi
 # bind -T copy-mode-vi Esc send-keys -X clear-selection
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
+# マウスホイールでスクロールできるようにする
+set -as terminal-overrides ',xterm*:smcup@:rmcup@'
 
 #------------------------------#
 # Others
@@ -44,5 +46,3 @@ bind R source-file ~/.tmux.conf \; display "Reloaded!"
 set-window-option -g mode-keys vi
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
-
-set -g terminal-overrides 'xterm*:smcup@:rmcup@'
