chore: なるべく多い色を使うように変更

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,8 +20,12 @@ bind l select-pane -R
 #------------------------------#
 # Visual Settings
 #------------------------------#
-set-option -g default-terminal screen-256color
-set -g terminal-overrides 'xterm:colors=256'
+# terminfo に tmux-256color があれば使い、なければ screen-256color を使う
+if-shell 'infocmp -x tmux-256color >/dev/null 2>&1' \
+  'set -g default-terminal "tmux-256color"' \
+  'set -g default-terminal "screen-256color"'
+# 端末が対応していれば True Color を優先
+set -as terminal-overrides ',*:Tc'
 
 #------------------------------#
 # Mouse settings
