--- a/.tmux.conf
+++ b/.tmux.conf
@@ -45,6 +45,8 @@ set -as terminal-overrides ',xterm*:smcup@:rmcup@'
 setw -g window-status-current-format '#[bg=colour2,fg=colour255]#{?client_prefix,#[bg=colour3],} #I #W '
 # R to reload this file
 bind R source-file ~/.tmux.conf \; display "Reloaded!"
+# Ctrl-g で lazygit をポップアップ表示
+bind-key -n C-g display-popup -w 80% -h 80% -d "#{pane_current_path}" -E lazygit
 
 # vi keybind on copy mode
 set-window-option -g mode-keys vi
