fix: sqlはプロジェクトのformatter設定に従うようにする

--- a/settings.json
+++ b/settings.json
@@ -19,6 +19,9 @@
     "editor.defaultFormatter": "charliermarsh.ruff",
     "editor.formatOnSave": true
   },
+  "[sql]": {
+    "editor.formatOnSave": false
+  },
   "[yaml]": {
     "editor.defaultFormatter": "redhat.vscode-yaml"
   },
