chore: tmuxの通知設定

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -39,6 +39,21 @@ bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pb
 set -as terminal-overrides ',xterm*:smcup@:rmcup@'
 
 #------------------------------#
+# Notification
+#------------------------------#
+set -g allow-passthrough all
+# 自動通知の有効化
+setw -g monitor-activity on
+set -g visual-activity on
+# BEL を tmux 内で握りつぶさず外側端末へ渡す
+set -g visual-bell off
+# 他ウィンドウのbell検知を有効化
+set -g bell-action any
+setw -g monitor-bell on
+# pane から BEL を受けたら音を鳴らす
+set-hook -g alert-bell 'run-shell "/usr/bin/afplay /System/Library/Sounds/Glass.aiff >/dev/null 2>&1"'
+
+#------------------------------#
 # Others
 #------------------------------#
 # Change status line color when Prefix pushed
