--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,6 +27,58 @@ if-shell 'infocmp -x tmux-256color >/dev/null 2>&1' \
 # 端末が対応していれば True Color を優先
 set -as terminal-overrides ',*:Tc'
 
+set-option -g @c-base-100 "#001C23"
+set-option -g @c-base-content "#FFD6A7"
+set-option -g @c-primary "#BEFF00"
+set-option -g @c-primary-content "#507000"
+set-option -g @c-neutral "#003741"
+set-option -g @c-neutral-content "#FFD6A7"
+set-option -g @c-info "#00BAFE"
+set-option -g @c-info-content "#042E49"
+
+set-option -g status-justify "centre"
+# Prefix が押された時はステータスバーの色を変える
+set-option -g status-style "bg=#{?client_prefix,#{@c-neutral},#{@c-base-100}}"
+
+set-option status-left-length 30 # default: 10
+set-option -g status-left '#( \
+  label=" #S "; \
+  bg="#{@c-base-100}"; \
+  color="#{@c-info}"; \
+  text_fg="#ffffff"; \
+  echo " #[bg=$bg,fg=$color]#[bg=$color,fg=$text_fg]$label#[bg=$bg,fg=$color]"; \
+)'
+
+set-option -gw window-status-separator ""
+set-option -gw window-status-format '#( \
+  label=" #I #W "; \
+  bg="#{@c-base-100}"; \
+  color="#{@c-neutral}"; \
+  text_fg="#{@c-neutral-content}"; \
+  if [ "#{window_bell_flag}" = "1" ]; then \
+    label=" 󱅫 #W "; \
+    color="#{@c-info}"; \
+    text_fg="#{@c-info-content}"; \
+  fi; \
+  echo "#[bg=$bg,fg=$color]#[bg=$color,fg=$text_fg]$label#[bg=$bg,fg=$color]"; \
+)'
+set-option -gw window-status-current-format '#( \
+  if [ "#{session_windows}" = "1" ]; then echo ""; exit; fi; \
+  label=" #W "; \
+  bg="#{@c-base-100}"; \
+  color="#{@c-primary}"; \
+  text_fg="#{@c-primary-content}"; \
+  echo "#[bg=$bg,fg=$color]#[bg=$color,fg=$text_fg,bold]$label#[bg=$bg,fg=$color,nobold]"; \
+)'
+
+set-option -g status-right '#( \
+  label=" %m/%d | %a |  %H:%M "; \
+  bg="#{@c-base-100}"; \
+  color="#{@c-info}"; \
+  text_fg="#ffffff"; \
+  echo " #[bg=$bg,fg=$color]#[bg=$color,fg=$text_fg]$label#[bg=$bg,fg=$color]"; \
+)'
+
 #------------------------------#
 # Mouse settings
 #------------------------------#
@@ -56,8 +108,6 @@ set-hook -g alert-bell 'run-shell "/usr/bin/afplay /System/Library/Sounds/Glass.
 #------------------------------#
 # Others
 #------------------------------#
-# Change status line color when Prefix pushed
-setw -g window-status-current-format '#[bg=colour2,fg=colour255]#{?client_prefix,#[bg=colour3],} #I #W '
 # R to reload this file
 bind R source-file ~/.tmux.conf \; display "Reloaded!"
 # Ctrl-g で lazygit をポップアップ表示
